--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "myFont";
+  src: url(fonts/HelveticaNeue.ttc);
+}
 #root {
   height: 100%;
-  font-family: "Jost", sans-serif;
+  font-family: "myFont";
 }
 
 * {
