--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-  font-family: "myFont";
-  src: url(fonts/HelveticaNeue.ttc);
-}
 #root {
   height: 100%;
-  font-family: "myFont";
 }
 
 * {
@@ -22,7 +17,7 @@
     @apply w-full h-svh flex relative;
   }
   .sectionPadding {
-    @apply w-full py-8 md:px-24 px-12;
+    @apply w-full md:py-12 py-8 md:px-36 px-12;
   }
   .flexCenter {
     @apply flex items-center justify-center;
