--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   box-sizing: border-box;
 }
 
+textarea:focus,
+input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 @layer utilities {
   .section {
     @apply w-full min-h-svh flex relative;
